# Diploma

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py  fixtures.py
tests/boards/: board_create_view_test.py  board_view_test.py
tests/core/: core_view_test.py
tests/goals/: category_create_view_test.py  category_view_test.py  goal_comment_view_test.py  goal_create_test.py  goal_view_test.py
todolist/: settings.py  urls.py
todolist/bot/: apps.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_tq_user_model.py  0002_rename_telegram_chat_id_tguser_chat_id_and_more.py  0003_tguser_category_tguser_state_tguser_title.py  0004_remove_tguser_title.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_options.py
todolist/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_goalcomment_goal.py  0005_alter_goalcomment_goal.py  0006_alter_goalcomment_goal.py  0007_alter_goalcomment_goal.py  0008_alter_goalcomment_goal.py  0009_remove_goalcomment_is_deleted_goalcomment_content.py  0010_rename_content_goalcomment_text_and_more.py  0011_board_goalcategory_board_boardparticipant.py  0012_create_new_objects.py  0013_alter_goalcategory_board.py
todolist/todolist/: settings.py
