[tool.poetry]
name = "homework33"
version = "0.1.0"
description = ""
authors = ["Nikalh <nikalhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.1"
python-dotenv = "0.21.1"
docker-compose = "^1.29.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
